--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
 		"workbox-webpack-plugin": "^6.5.4"
 	},
 	"dependencies": {
+		"clean-webpack-plugin": "^4.0.0",
 		"code-mirror-themes": "^1.0.0",
 		"idb": "^6.1.2"
 	}
